--- a/apis/pom.xml
+++ b/apis/pom.xml
@@ -57,6 +57,12 @@
             <version>1.16.20</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.eclipsesource.minimal-json</groupId>
+            <artifactId>minimal-json</artifactId>
+            <version>0.9.5</version>
+        </dependency>
     </dependencies>
 
     <build>
