Adding spring-cloud-sleuth dependency

--- a/apis/src/main/resources/application.properties
+++ b/apis/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name=maggie
+
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 spring.jpa.show-sql=true 
