--- a/apis/pom.xml
+++ b/apis/pom.xml
@@ -55,9 +55,14 @@
         </dependency>
 
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
         </dependency>
 
         <dependency>
@@ -77,6 +82,7 @@
             <groupId>br.com.six2six</groupId>
             <artifactId>fixture-factory</artifactId>
             <version>3.1.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -129,6 +135,19 @@
                 <configuration>
                     <skip>${surefire.skip}</skip>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>5.2.0</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.postgresql</groupId>
+                        <artifactId>postgresql</artifactId>
+                        <version>42.2.2</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
