--- a/apis/src/main/resources/application.properties
+++ b/apis/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 spring.application.name=maggie
 
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
-spring.jpa.show-sql=true 
+logging.level.org.hibernate.type=ERROR
+
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/maggie
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
